RESOLVED FIXED14926
WebKit has 'em' length handling problems related to CSS properties
https://bugs.webkit.org/show_bug.cgi?id=14926
Summary WebKit has 'em' length handling problems related to CSS properties
Nikolas Zimmermann
Reported 2007-08-10 07:58:42 PDT
These two lines give different results: <line x1="0" y1="110" x2="30em" y2="110" style="font-size: 10"/> <line x1="0" y1="110" x2="30em" y2="110" font-size="10"/> Expected would be a value of x2="300". The first line gives sth. bigger, as the font-size: 10 is not handled - as it seems. Not investigated yet, but SVGLength::value() deals with em/exs handling.
Attachments
First attempt (329.27 KB, patch)
2007-08-18 12:50 PDT, Rob Buis
zimmermann: review+
Rob Buis
Comment 1 2007-08-18 12:50:21 PDT
Created attachment 16016 [details] First attempt Make sure SVG inline style attributes parse in non-strict mode (because lengths without unit should be allowed in SVG). Cheers, Rob.
Nikolas Zimmermann
Comment 2 2007-08-18 14:11:23 PDT
Comment on attachment 16016 [details] First attempt Excellent spot. I guess the other changed testcases are all improvments? In that case, r=me. Greetings, Niko
Rob Buis
Comment 3 2007-08-19 01:25:12 PDT
Landed in r25145.
Note You need to log in before you can comment on or make changes to this bug.