        Reviewed by Nikolas.

http://bugs.webkit.org/show_bug.cgi?id=14926
        WebKit has 'em' length handling problems related to CSS properties

        Parse the properties in inline style attributes non-strict for SVG.



Canonical link: https://commits.webkit.org/20430@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@26440 268f45cc-cd09-0410-ab3c-d52691b4dbfc